--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VideoLab</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- top navigation -->
@@ -29,9 +31,10 @@
             <!-- this is a placeholder replace it with a real video -->
             <figure class="video-location">
 
-                    <title>Video</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <video id="my-video" src="video/pexels-koolshooters-6976086-2880x2160-25fps.mp4" width="720px" height="400px" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)"></video>
+                <title>Video</title>
+                <rect width="100%" height="100%" fill="#868e96"></rect>
+                <video id="my-video" src="video/pexels-koolshooters-6976086-2880x2160-25fps.mp4" width="720px"
+                    height="400px" onmouseover="playVideo(this)" onmouseout="pauseVideo(this)"></video>
                 </svg>
             </figure>
 
@@ -81,4 +84,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
